--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:pkitlas@me.com">email</a></li>
-	        		<li><a href="https://pkitlas.github.io">My Website</a></li>
+	        		<li><a href="https://pkitlas.github.io">website</a></li>
 				</ul>
 			</footer>
 		</body>
