--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,11 @@
 <html lang="{{ site.lang | default: "en-US" }}">
 
   <head>
-    <meta charset='utf-8'>
+    <title>{{ page.title }}</title>
+			<!-- link to main stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/main.css"><meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <meta name="viewport" content="width=device-width,maximum-scale=2
 
 {% seo %}
   </head>
